main completed notebooks

--- a/notebooks/block2d.ipynb
+++ b/notebooks/block2d.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -18,10 +31,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x17fb5e7ff50>"
+       "<matplotlib.animation.FuncAnimation at 0x1e5a8e98790>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x17fb8845ad0>"
+       "<matplotlib.animation.FuncAnimation at 0x1e5f9a896d0>"
       ]
      },
      "execution_count": 3,
