--- a/notebooks/game_of_life.ipynb
+++ b/notebooks/game_of_life.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,42 +216,42 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_img482484182b4543459e239bb879511e17\">\n",
+       "  <img id=\"_anim_imgfeee19e8b4bc4bfa8cc4ae39b39f6c72\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_slider482484182b4543459e239bb879511e17\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_sliderfeee19e8b4bc4bfa8cc4ae39b39f6c72\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"anim482484182b4543459e239bb879511e17.set_frame(parseInt(this.value));\">\n",
+       "           oninput=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.set_frame(parseInt(this.value));\">\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim482484182b4543459e239bb879511e17.slower()\">\n",
+       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.slower()\">\n",
        "          <i class=\"fa fa-minus\"></i></button>\n",
-       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim482484182b4543459e239bb879511e17.first_frame()\">\n",
+       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.first_frame()\">\n",
        "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim482484182b4543459e239bb879511e17.previous_frame()\">\n",
+       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim482484182b4543459e239bb879511e17.reverse_animation()\">\n",
+       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim482484182b4543459e239bb879511e17.pause_animation()\">\n",
+       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.pause_animation()\">\n",
        "          <i class=\"fa fa-pause\"></i></button>\n",
-       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim482484182b4543459e239bb879511e17.play_animation()\">\n",
+       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.play_animation()\">\n",
        "          <i class=\"fa fa-play\"></i></button>\n",
-       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim482484182b4543459e239bb879511e17.next_frame()\">\n",
+       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.next_frame()\">\n",
        "          <i class=\"fa fa-step-forward\"></i></button>\n",
-       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim482484182b4543459e239bb879511e17.last_frame()\">\n",
+       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.last_frame()\">\n",
        "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim482484182b4543459e239bb879511e17.faster()\">\n",
+       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"animfeee19e8b4bc4bfa8cc4ae39b39f6c72.faster()\">\n",
        "          <i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select482484182b4543459e239bb879511e17\"\n",
+       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_selectfeee19e8b4bc4bfa8cc4ae39b39f6c72\"\n",
        "          class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_482484182b4543459e239bb879511e17\"\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_feee19e8b4bc4bfa8cc4ae39b39f6c72\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio1_482484182b4543459e239bb879511e17\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_482484182b4543459e239bb879511e17\"\n",
+       "      <label for=\"_anim_radio1_feee19e8b4bc4bfa8cc4ae39b39f6c72\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_feee19e8b4bc4bfa8cc4ae39b39f6c72\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio2_482484182b4543459e239bb879511e17\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_482484182b4543459e239bb879511e17\"\n",
+       "      <label for=\"_anim_radio2_feee19e8b4bc4bfa8cc4ae39b39f6c72\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_feee19e8b4bc4bfa8cc4ae39b39f6c72\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_482484182b4543459e239bb879511e17\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_feee19e8b4bc4bfa8cc4ae39b39f6c72\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -248,9 +261,9 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_img482484182b4543459e239bb879511e17\";\n",
-       "    var slider_id = \"_anim_slider482484182b4543459e239bb879511e17\";\n",
-       "    var loop_select_id = \"_anim_loop_select482484182b4543459e239bb879511e17\";\n",
+       "    var img_id = \"_anim_imgfeee19e8b4bc4bfa8cc4ae39b39f6c72\";\n",
+       "    var slider_id = \"_anim_sliderfeee19e8b4bc4bfa8cc4ae39b39f6c72\";\n",
+       "    var loop_select_id = \"_anim_loop_selectfeee19e8b4bc4bfa8cc4ae39b39f6c72\";\n",
        "    var frames = new Array(50);\n",
        "    \n",
        "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoAAAAHgCAYAAAA10dzkAAAAOXRFWHRTb2Z0d2FyZQBNYXRwbG90\\\n",
@@ -15929,7 +15942,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        anim482484182b4543459e239bb879511e17 = new Animation(frames, img_id, slider_id, 200.0,\n",
+       "        animfeee19e8b4bc4bfa8cc4ae39b39f6c72 = new Animation(frames, img_id, slider_id, 200.0,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
@@ -15939,7 +15952,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
